--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="calculator.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class = 'calculator'>
+        <div class = 'first row'>
+            <div>7</div><div>8</div><div>9</div><div>/</div>
+        </div>
+        <div class = 'second row'>
+            <div>4</div><div>5</div><div>6</div><div>x</div>
+        </div>
+        <div class = 'third row'>
+            <div>1</div><div>2</div><div>3</div><div>-</div>
+        </div>
+        <div class = 'fourth row'>
+            <div>c</div>
+            <div>0</div>
+            <div>=</div>
+            <div>+</div>
+        </div>
+    </div>
 </body>
 </html>
