added button and classes for calculator

--- a/index.html
+++ b/index.html
@@ -5,26 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="calculator.js"></script>
+    <script src="calculator.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = 'calculator'>
-        <div class = 'first row'>
-            <div>7</div><div>8</div><div>9</div><div>/</div>
+        <div class = 'calculator'>
+            <div class = 'first row'>
+                <button class="input">7</button>
+                <button class="input">8</button>
+                <button class="input">9</button>
+                <button class="input">/</button>
+            </div>
+            <div class = 'second row'>
+                <button class="input">4</button>
+                <button class="input">5</button>
+                <button class="input">6</button>
+                <button class="input">*</button>
+            </div>
+            <div class = 'third row'>
+                <button class="input one">1</button>
+                <button class="input two">2</button>
+                <button class="input three">3</button>
+                <button class="input">-</button>
+            </div>
+            <div class = 'fourth row'>
+                <button class="input">c</button>
+                <button class="input">0</button>
+                <button class="input">=</button>
+                <button class="input">+</button>
+            </div>
         </div>
-        <div class = 'second row'>
-            <div>4</div><div>5</div><div>6</div><div>x</div>
-        </div>
-        <div class = 'third row'>
-            <div>1</div><div>2</div><div>3</div><div>-</div>
-        </div>
-        <div class = 'fourth row'>
-            <div>c</div>
-            <div>0</div>
-            <div>=</div>
-            <div>+</div>
-        </div>
-    </div>
+
 </body>
 </html>
