--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
 </head>
 <body>
         <div class = 'calculator'>
+        <p></p>
+
             <div class = 'first row'>
-                <button class="input">7</button>
-                <button class="input">8</button>
-                <button class="input">9</button>
-                <button class="input">/</button>
+                <button value= "7" class="input number">7</button>
+                <button value= "8" class="input number">8</button>
+                <button value= "9" class="input number">9</button>
+                <button value= "/" class="input operator">/</button>
             </div>
             <div class = 'second row'>
-                <button class="input">4</button>
-                <button class="input">5</button>
-                <button class="input">6</button>
-                <button class="input">*</button>
+                <button value= "4" class="input number">4</button>
+                <button value= "5" class="input number">5</button>
+                <button value= "6" class="input number">6</button>
+                <button value= "*" class="input operator">*</button>
             </div>
             <div class = 'third row'>
-                <button class="input one">1</button>
-                <button class="input two">2</button>
-                <button class="input three">3</button>
-                <button class="input">-</button>
+                <button value= "1" class="input number">1</button>
+                <button value= "2" class="input number">2</button>
+                <button value= "3" class="input number">3</button>
+                <button value= "-" class="input operator">-</button>
             </div>
             <div class = 'fourth row'>
-                <button class="input">c</button>
-                <button class="input">0</button>
-                <button class="input">=</button>
-                <button class="input">+</button>
+                <button value= "c" class="input">c</button>
+                <button value= "0" class="input number">0</button>
+                <button value= "=" class="input equal">=</button>
+                <button value= "+" class="input operator">+</button>
             </div>
         </div>
-
 </body>
 </html>
