added equal logic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button value= "-" class="input operator">-</button>
             </div>
             <div class = 'fourth row'>
-                <button value= "c" class="input">c</button>
+                <button value= "c" class="input clear">c</button>
                 <button value= "0" class="input number">0</button>
                 <button value= "=" class="input equal">=</button>
                 <button value= "+" class="input operator">+</button>
